--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 *{
     font-family: 'Baloo Chettan 2', cursive;
+    /* font-family: 'Roboto Slab', serif; */
 }
 body{
     padding: 0;
@@ -129,4 +130,72 @@ header ul{
     background-size: contain;
     width: 32px;
     height: 32px;
+}
+.s2{
+    margin:2% auto;
+    /* border: solid; */
+    width: 90%;
+    height: 90vh;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    background-color: white;
+    border-radius: 29px;
+    box-shadow: 0px 0px 4px 0 black;
+}
+.project_img{
+    background-image: url(../images/tablet-313002_1920.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* width: 50%; */
+    height: 100%;
+    /* border: solid red; */
+    border-radius: 100px;
+}
+.project_title{
+    width: 50%;
+    margin: auto 10%;
+    /* text-align: center; */
+    font-size: medium;
+    margin-top: 20%;
+}
+.project_title h2{
+    color: white;
+    background-color: black;
+    padding: 1%;
+    display: inline;
+}
+.project_title hr{
+    width: 50px;
+    margin: 0;
+    height: 4px;
+    background-color: black;
+}
+.project_title p{
+    padding: 0% 15%;
+    padding-left: 0%;
+    margin: 5% auto;
+}
+.project_title a{
+    text-decoration: none;
+    border: solid black;
+    color: black;
+    padding: 4% 9%;
+    border-radius: 200px;
+    display: inline-flex;
+    flex-direction: row;
+    margin-top: 3%;
+    align-items: center;
+}
+.arrow{
+    background-image: url(../images/arrow_trimmed.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: white;
+    width: 63px;
+    height: 25px;
+    display: inline;
+    position: absolute;
+    margin-left: 6.2%;
 }
