--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ header{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    margin-left: 2%;
+    margin-left: 60px;
     font-weight: bolder;
 }
 header ul{
@@ -136,6 +136,20 @@ header ul li a{
     width: 32px;
     height: 32px;
 }
+.development_warning{
+    width: 373px;
+    position: fixed;
+    background-color: white;
+    top: 10px;
+    right: 50%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 38px;
+    padding: 2%;
+    box-shadow: 0px 0px 4px 0px;
+    font-weight: bold;
+    font-size: larger;
+}
 .s2{
     margin:2% auto;
     /* border: solid; */
@@ -156,7 +170,8 @@ header ul li a{
     border-radius: 100px;
 }
 .project_title{
-    width: 50%;
+    width: 277px;
+    height: 277px;
     margin: auto 10%;
     font-size: medium;
     margin-top: 20%;
@@ -164,7 +179,7 @@ header ul li a{
 .project_title h5{
     color: white;
     background-color: black;
-    padding: 2% 4%;
+    padding:7px 14px;
     display: inline;
     
 }
@@ -179,11 +194,11 @@ header ul li a{
     padding-left: 0%;
     margin: 5% auto;
 }
-.project_title a{
+.redirect_button{
     text-decoration: none;
     border: solid black;
     color: black;
-    padding: 4% 9%;
+    padding: 12px 24px;
     border-radius: 200px;
     display: inline-flex;
     flex-direction: row;
@@ -206,11 +221,12 @@ header ul li a{
 .p1{
     /* border: solid; */
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 10% auto;
 }
 .project_no{
     width: 80%;
@@ -237,7 +253,7 @@ header ul li a{
 }
 .pc_screen{
     width: 80%;
-    height: 80%;
+    height: 80vh;
     border: 4px solid #aba6a6;
     border-radius: 30px;
     display: flex;
