--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,3 +18,19 @@
 .redirect_page{
     font-size: 50px;
 }
+.quote{
+    font-size: 50px;
+}
+.s2{
+    height:75vh;
+}
+.project_img{
+    height: 320px;
+    background-size: cover;
+    /* background-position: 40% center; */
+}
+.a1{
+    padding:0%;
+    padding-top: 10%;
+    font-size: 60px;
+}
