--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,9 @@ background-color: black;
     position: absolute;
     margin-left: 90px;
 }
+.quote{
+    text-align: center;font-size: 75px;margin: 100px 0px 50px 0px;
+}
 .p1{
     /* border: solid; */
     width: 100%;
@@ -474,7 +477,7 @@ hr{
     width: 50%;
     background-color: black;
 }.contact_details{
-    width: 110%;
+    width: 70vw;
     height: 50%;
     /* border: solid; */
     display: flex;
