--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ background-color: black;
     background-color: white;
     border: 2px solid;
     padding: 0px;
-    margin-top: 10%;
+    margin-top: 70px;
     z-index: -1;
 }
 .menu_elements ul a{
